fix: permit avatar field
